Downgraded to JDK17 in order to maximize most popular Intellij platform support